updated NB, added img for NB

--- a/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
@@ -332,56 +332,262 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Comparing output stats files from different steps in cragig009 and test run that worked fine\n",
+    "\n",
+    "I have no good way of looking at any singular stats output file and discerning whether the step is overzealous in it's filtering, or causing some issue. But, cragig004-006 all produced a normal seeming number of loci, and all samples made it through filtering steps with pretty much the same parameters. So I'm going to compare those to see if I can pinpoint what is different between cragig004-006 and cragig009 that may have caused this issue.\n",
+    "\n",
+    "#### s3_cluster_stats.txt\n",
+    "\n",
+    "Visually, these files seem to have really similar values. Below, I practiced using Kolmogorov–Smirnov test from ``scipy`` which said the distributions are different, and I'm not sure why that is when visually they look so similar. I wonder if it just as to do with sample size, as cragig009 has 14x as many samples as cragig004.\n",
+    "\n",
+    "Visually th"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import ks_2samp"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "s3_009 = open(\"cragig009_clust_0.85/s3_cluster_stats.txt\",\"r\")\n",
+    "s3_009_lines = s3_009.readlines()\n",
+    "s3_009.close()\n",
+    "\n",
+    "clusters_total_009 = []\n",
+    "clusters_hidepth_min_009 = []\n",
+    "avg_depth_total_009 = []\n",
+    "avg_depth_mj_009 = []\n",
+    "sd_depth_total_009 = []\n",
+    "sd_depth_mj_009 = []\n",
+    "\n",
+    "for line in s3_009_lines[1:]: # iterate over lines, exclude header\n",
+    "    linelist = line.strip().split()\n",
+    "    clusters_total_009.append(float(linelist[1]))\n",
+    "    clusters_hidepth_min_009.append(float(linelist[3])) \n",
+    "    avg_depth_total_009.append(float(linelist[4]))\n",
+    "    avg_depth_mj_009.append(float(linelist[5]))\n",
+    "    sd_depth_total_009.append(float(linelist[7]))\n",
+    "    sd_depth_mj_009.append(float(linelist[8]))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUN1_py\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUN1_py"
+   ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s3_004 = open(\"cragig004_clust_0.85/s3_cluster_stats.txt\",\"r\")\n",
+    "s3_004_lines = s3_004.readlines()\n",
+    "s3_004.close()\n",
+    "\n",
+    "clusters_total_004 = []\n",
+    "clusters_hidepth_min_004 = []\n",
+    "avg_depth_total_004 = []\n",
+    "avg_depth_mj_004 = []\n",
+    "sd_depth_total_004 = []\n",
+    "sd_depth_mj_004 = []\n",
+    "\n",
+    "for line in s3_004_lines[1:]: # iterate over lines, exclude header\n",
+    "    linelist = line.strip().split()\n",
+    "    clusters_total_004.append(float(linelist[1]))\n",
+    "    clusters_hidepth_min_004.append(float(linelist[3])) \n",
+    "    avg_depth_total_004.append(float(linelist[4]))\n",
+    "    avg_depth_mj_004.append(float(linelist[5]))\n",
+    "    sd_depth_total_004.append(float(linelist[7]))\n",
+    "    sd_depth_mj_004.append(float(linelist[8]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks_2sampResult(statistic=0.51118881118881121, pvalue=0.009070706460590371)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ks_2samp(clusters_total_004,clusters_total_009)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks_2sampResult(statistic=0.41118881118881118, pvalue=0.060924309190217511)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ks_2samp(clusters_hidepth_min_004,clusters_hidepth_min_009)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks_2sampResult(statistic=0.49020979020979022, pvalue=0.01399709655173435)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ks_2samp(avg_depth_total_004,avg_depth_total_009)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks_2sampResult(statistic=0.4972027972027972, pvalue=0.012137132869640509)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ks_2samp(avg_depth_mj_004,avg_depth_mj_009)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks_2sampResult(statistic=0.68321678321678325, pvalue=0.00013032710397125613)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ks_2samp(sd_depth_total_004,sd_depth_total_009)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks_2sampResult(statistic=0.65524475524475523, pvalue=0.00028234576079832346)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ks_2samp(sd_depth_mj_004,sd_depth_mj_009)"
+   ]
   },
   {
    "cell_type": "code",
