--- a/CRAGIG_run2/Notebooks/First Look at CRAGIG_run2.ipynb
+++ b/CRAGIG_run2/Notebooks/First Look at CRAGIG_run2.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Verify successful download using md5 check sum"
    ]
@@ -11,7 +14,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -30,7 +35,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -49,7 +56,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -66,7 +75,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "From the md5.txt file:\n",
     "\n",
@@ -79,7 +91,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -96,7 +110,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "From the md5.txt file:\n",
     "\n",
@@ -106,13 +123,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Check quality using FastQC\n",
+    "\n",
+    "**20170613**\n",
+    "\n",
+    "I jumped right into trying to analyze both lanes of scallop data in ipyrad, and have been having some issues. I wondered if the sequencing run went well and realized I never actually checked. So I'm going to run a bunch of the fastq files through it and report back here.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
